--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,90 @@
 /* You can add global styles to this file, and also import other style files */
+thead.bg-light {
+    background-color: #cccceb !important;
+}
+
+thead.bg-light1 {
+  background-color: #f2e8ff !important;
+}
+
+h5.card-header {
+  background-color: #cccceb;
+}
+
+/* Tick Mark Css START*/
+.checkmark {
+    display:inline-block;
+    width: 22px;
+    height:22px;
+    -ms-transform: rotate(45deg); /* IE 9 */
+    -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+    transform: rotate(45deg);
+}
+
+.checkmark_circle {
+    position: absolute;
+    width:22px;
+    height:22px;
+    background-color: green;
+    border-radius:11px;
+    left:0;
+    top:0;
+}
+
+.checkmark_stem {
+    position: absolute;
+    width:3px;
+    height:9px;
+    background-color:#fff;
+    left:11px;
+    top:6px;
+}
+
+.checkmark_kick {
+    position: absolute;
+    width:3px;
+    height:3px;
+    background-color:#fff;
+    left:8px;
+    top:12px;
+}
+/* Tick Mark Css END */
+
+/* Cross Mark Css START*/
+.crosssign {
+    display: inline-block;
+    width: 22px;
+    height: 22px;
+    position: relative;
+    transform: rotate(45deg);
+  }
+  
+  .crosssign_circle {
+    position: absolute;
+    width: 22px;
+    height: 22px;
+    background-color: red;
+    border-radius: 11px;
+    left: 0;
+    top: 0;
+  }
+  
+  .crosssign_stem,
+  .crosssign_stem2 {
+    position: absolute;
+    background-color: #fff;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .crosssign_stem {
+    width: 3px;
+    height: 9px;
+  }
+  
+  .crosssign_stem2 {
+    width: 9px;
+    height: 3px;
+  }
+/* Cross Mark Css END */
